add numbered step comments

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             justify-content: space-around;
         }
     </style>
-   
 </head>
 <body>
+    <!-- Step 1: Add an HTML template for our component to use -->
     <template>
         <style>
 
@@ -82,7 +82,7 @@
 
         <article>
             <div class="ghost">
-                <slot name="eyes"><h1>^  ^</h1></slot>
+                <h1>^  ^</h1>
                 <h1><sup>o</sup></h1>
             </div>
             <div class="tombstone">
@@ -92,19 +92,18 @@
     </template>
 
     <section>
-        <grave-yard color="#ff3399">
+        <!-- Step 3. Use your custom component -->
+        <grave-yard>
             <p slot="text">RIP IE</p>
             <p slot="text">1995-2016</p>
         </grave-yard>
         
         <grave-yard>
-            <h1 slot="eyes">O  O</h1>
             <p slot="text">boy bye</p>
             <p slot="text">#nope</p>
         </grave-yard>
         
         <grave-yard>
-            <h1 slot="eyes">o  -</h1>
             <p slot="text">"wow it's dark down here"</p>
         </grave-yard>
     </section>
